--- a/html-css/exercicios/exercicio22/fundo005.html
+++ b/html-css/exercicios/exercicio22/fundo005.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             background-color: black;
@@ -12,11 +12,12 @@
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +28,7 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ad placeat? Ducimus officiis dolore sed nemo accusantium magnam, ipsa amet doloremque temporibus quaerat, magni pariatur deleniti, inventore hic nesciunt debitis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo eius aperiam nisi sint dolor doloremque, exercitationem natus nesciunt aliquam voluptatum aspernatur molestias repudiandae accusantium ducimus corporis voluptate cupiditate magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum ea tempore explicabo animi, vel mollitia sequi, quos, maxime odit molestiae vero possimus quaerat cumque quibusdam praesentium perferendis! Hic, quam!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ad placeat? Ducimus officiis dolore sed nemo accusantium magnam, ipsa amet doloremque temporibus quaerat, magni pariatur deleniti, inventore hic nesciunt debitis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo eius aperiam nisi sint dolor doloremque, exercitationem natus nesciunt aliquam voluptatum aspernatur molestias repudiandae accusantium ducimus corporis voluptate cupiditate magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum ea tempore explicabo animi, vel mollitia sequi, quos, maxime odit molestiae vero possimus quaerat cumque quibusdam praesentium perferendis! Hic, quam!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ad placeat? Ducimus officiis dolore sed nemo accusantium magnam, ipsa amet doloremque temporibus quaerat, magni pariatur deleniti, inventore hic nesciunt debitis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo eius aperiam nisi sint dolor doloremque, exercitationem natus nesciunt aliquam voluptatum aspernatur molestias repudiandae accusantium ducimus corporis voluptate cupiditate magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum ea tempore explicabo animi, vel mollitia sequi, quos, maxime odit molestiae vero possimus quaerat cumque quibusdam praesentium perferendis! Hic, quamLorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ad placeat? Ducimus officiis dolore sed nemo accusantium magnam, ipsa amet doloremque temporibus quaerat, magni pariatur deleniti, inventore hic nesciunt debitis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo eius aperiam nisi sint dolor doloremque, exercitationem natus nesciunt aliquam voluptatum aspernatur molestias repudiandae accusantium ducimus corporis voluptate cupiditate magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum ea tempore explicabo animi, vel mollitia sequi, quos, maxime odit molestiae vero possimus quaerat cumque quibusdam praesentium perferendis! Hic, quamLorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ad placeat? Ducimus officiis dolore sed nemo accusantium magnam, ipsa amet doloremque temporibus quaerat, magni pariatur deleniti, inventore hic nesciunt debitis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo eius aperiam nisi sint dolor doloremque, exercitationem natus nesciunt aliquam voluptatum aspernatur molestias repudiandae accusantium ducimus corporis voluptate cupiditate magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum ea tempore explicabo animi, vel mollitia sequi, quos, maxime odit molestiae vero possimus quaerat cumque quibusdam praesentium perferendis! Hic, quam</p>
     </main>
 </body>
 </html>
