--- a/html-css/exercicios/tabelas001/tabela002.html
+++ b/html-css/exercicios/tabelas001/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -22,6 +23,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(65, 62, 62);
         }
 
         td.num {
@@ -47,7 +54,7 @@
         <thead>
             <tr>
                 <th scope="col">estado</th>
-                <th style="width: 100px;"></th> scope="col">população</th>
+                <th style="width: 100px;" scope="col">população</th>
             </tr>
         </thead>
         <tbody>
@@ -67,6 +74,70 @@
                 <td>blablabla</td>
                 <td class="num">blabalablabl</td>
             </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
+            <tr>
+                <td>blablabla</td>
+                <td class="num">blabalablabl</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -75,5 +146,10 @@
             </tr>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae doloremque numquam delectus, praesentium tempore quidem, ratione sint necessitatibus quo velit eaque quae earum autem sed doloribus qui omnis in natus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nam voluptates sapiente perspiciatis quos blanditiis hic ipsa maiores officia? Suscipit ratione blanditiis sunt error veniam doloremque minus? Eveniet, quam sit?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur modi exercitationem tempora natus quia vero atque animi ipsa quaerat quos tenetur incidunt rerum, soluta quidem? Necessitatibus laboriosam distinctio omnis non?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum eveniet animi ipsum corrupti blanditiis autem illum at ipsam recusandae exercitationem odio aspernatur, voluptatum, voluptate asperiores quam. Ad, maiores molestiae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae doloremque numquam delectus, praesentium tempore quidem, ratione sint necessitatibus quo velit eaque quae earum autem sed doloribus qui omnis in natus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nam voluptates sapiente perspiciatis quos blanditiis hic ipsa maiores officia? Suscipit ratione blanditiis sunt error veniam doloremque minus? Eveniet, quam sit?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur modi exercitationem tempora natus quia vero atque animi ipsa quaerat quos tenetur incidunt rerum, soluta quidem? Necessitatibus laboriosam distinctio omnis non?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum eveniet animi ipsum corrupti blanditiis autem illum at ipsam recusandae exercitationem odio aspernatur, voluptatum, voluptate asperiores quam. Ad, maiores molestiae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae doloremque numquam delectus, praesentium tempore quidem, ratione sint necessitatibus quo velit eaque quae earum autem sed doloribus qui omnis in natus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nam voluptates sapiente perspiciatis quos blanditiis hic ipsa maiores officia? Suscipit ratione blanditiis sunt error veniam doloremque minus? Eveniet, quam sit?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur modi exercitationem tempora natus quia vero atque animi ipsa quaerat quos tenetur incidunt rerum, soluta quidem? Necessitatibus laboriosam distinctio omnis non?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum eveniet animi ipsum corrupti blanditiis autem illum at ipsam recusandae exercitationem odio aspernatur, voluptatum, voluptate asperiores quam. Ad, maiores molestiae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae doloremque numquam delectus, praesentium tempore quidem, ratione sint necessitatibus quo velit eaque quae earum autem sed doloribus qui omnis in natus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nam voluptates sapiente perspiciatis quos blanditiis hic ipsa maiores officia? Suscipit ratione blanditiis sunt error veniam doloremque minus? Eveniet, quam sit?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur modi exercitationem tempora natus quia vero atque animi ipsa quaerat quos tenetur incidunt rerum, soluta quidem? Necessitatibus laboriosam distinctio omnis non?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum eveniet animi ipsum corrupti blanditiis autem illum at ipsam recusandae exercitationem odio aspernatur, voluptatum, voluptate asperiores quam. Ad, maiores molestiae!</p>
 </body>
 </html>
