--- a/html-css/exercicios/testes próprios/teste001.html
+++ b/html-css/exercicios/testes próprios/teste001.html
@@ -9,7 +9,7 @@
 <body>
         <header>
             <nav>
-                <a href="">Home</a>
+                <a href="" class="estado">Home</a>
                 <a href="">About</a>
                 <a href="">Resume</a>
                 <a href="">Portfolio</a>
