--- a/html-css/exercicios/formularios/form003.html
+++ b/html-css/exercicios/formularios/form003.html
@@ -41,7 +41,11 @@
     </p>
     <p>
       <label for="idia">Dia da prova</label>
-      <input type="date" name="dia" id="idia" value="2023-12-21" />
+      <input type="date" name="dia" id="idia" value="2023-12-21" required />
+    </p>
+    <p>
+      <label for="ihora">Hora da prova</label>
+      <input type="time" name="hora" id="ihora" required />
     </p>
     <p>
       <input type="submit" value="Enviar" />
