--- a/javascript/exercicios/ex004/index.html
+++ b/javascript/exercicios/ex004/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font: normal 20pt Arial;
+        }
+    </style>
 </head>
 <body>
     
 
     <script>
-        var nome = window
+        var nome = window.prompt('qual é seu nome?')
+
+        document.write(` ola <strong>${nome}</strong> seu nome tem ${nome.length} letras.<br>`)
+
+        document.write(` seu nome em maiusculas é ${nome.toUpperCase()}<br>`)
+
+        document.write(` e seu nome em minusculo é ${nome.toLowerCase()}`)
     </script>
 </body>
 </html>
